Closes #92 (#97)